[package]
name = "transflag-avatar-tool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "ImageData",
  "Window",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1.6"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "gif", "webp", "bmp"]

[profile.release]
lto = true
opt-level = 'z'